--- a/preview/order/index.html
+++ b/preview/order/index.html
@@ -8,13 +8,28 @@
 	<meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>𝘎𝘪𝘰𝘪𝘦𝘭𝘭𝘪 微信点单</title>
 
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
 	<link rel="icon" type="image/png" href="/icons/icon-72x72.png" sizes="72x72">
   <link rel="icon" type="image/png" href="/icons/icon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/png" href="/icons/icon-192x192.png" sizes="192x192">
 	<link rel="apple-touch-icon" href="/icons/icon-192x192.png" sizes="192x192">
 
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
+<!-- 
+  <script>
+   $(document).ready(function(){
+    if (("standalone" in window.navigator) && window.navigator.standalone) {
+      // For iOS Apps
+      $('a').on('click', function(e){
+        e.preventDefault();
+        var new_location = $(this).attr('href');
+        if (new_location != undefined && new_location.substr(0, 1) != '#' && $(this).attr('data-method') == undefined){
+          window.location = new_location;
+        }
+      });
+    }
+   });
+  </script> -->
 </head>
 <body cz-shortcut-listen="true">
 
